--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <!-- MENU -->
     <nav>
         <a href="#">Teste Cortesia</a>
-        <a href="#">Suporte</a>
-        <a href="#">Redes Sociais</a>
+        <a href="#">Fale Conosco</a>
     </nav>
     
     <!-- ---------------------------------------------------- -->
@@ -32,9 +31,9 @@
     <!-- PARTE PRINCIPAL -->
     <main>
         <article>
-            <h1>Bem-vindo à [Nome da Empresa]!</h1>
+            <h1>Bem-vindo à RD PLAY!</h1>
 
-    <p>Somos uma equipe apaixonada e dedicada a [descrever a missão da empresa]. Com [número] anos de experiência no mercado, nos destacamos por nossa [principal característica da empresa, como "inovação" ou "qualidade"].</p>
+    <p>Somos uma equipe apaixonada e dedicada a Levar a você os melhores conteudos de Tv, Filmes e Series. Com 1 ano de experiência no mercado, nos destacamos por nossa [principal característica da empresa, como "inovação" ou "qualidade"].</p>
 
 
 
