--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 
     <p>Se você está procurando por [descrever o que a empresa oferece], entre em contato conosco. Estamos ansiosos para saber mais sobre suas necessidades e como podemos ajudá-lo.</p>
 
+    
+    <picture>
+        <img src="imagens/poc-frente.png" alt="">
+        <img src="imagens/poc-costa.png" alt="">
+    </picture>
+
+
+
         </article>
     </main>
 
