--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     <p>Se você está procurando por [descrever o que a empresa oferece], entre em contato conosco. Estamos ansiosos para saber mais sobre suas necessidades e como podemos ajudá-lo.</p>
 
     
-    <picture>
-        <img src="imagens/poc-frente.png" alt="">
-        <img src="imagens/poc-costa.png" alt="">
-    </picture>
+   <!-- Coloque dentro do seu <article> -->
+<div class="card-imagens">
+  <img src="imagens/poc-frente400.png" alt="Frente">
+  <img src="imagens/poc-costa 400px.png" alt="Costa">
+</div>
 
 
 
