--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
     <p>Se você está procurando por [descrever o que a empresa oferece], entre em contato conosco. Estamos ansiosos para saber mais sobre suas necessidades e como podemos ajudá-lo.</p>
 
     
+    <h2>Camisas</h2>
+    <p>Modelo Único a pronta entrega,Caso tenha interesse entre em contato conoscoe faça seu orçamento!</p>
+
    <!-- Coloque dentro do seu <article> -->
 <div class="card-imagens">
+    
   <img src="imagens/poc-frente400.png" alt="Frente">
+  
   <img src="imagens/poc-costa 400px.png" alt="Costa">
 </div>
 
